type FundTypeModel = {
    fund_type_id? : number,
    fund_type_name: string
}

export default FundTypeModel;